--- a/SWD/SWD.csproj
+++ b/SWD/SWD.csproj
@@ -10,4 +10,10 @@
       <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
+        <HintPath>..\..\..\.nuget\packages\nunit\3.11.0\lib\netstandard2.0\nunit.framework.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
